# kaalin-python

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
kaalin/: __init__.py  constants.py
kaalin/converter/: latin_cyrillic_converter.py
kaalin/number/: num2words.py  number.py
kaalin/syllable/: __init__.py  syllabifier.py
kaalin/words/: cyrillic.py  latin.py
test/: test_kaalin_converter.py  test_kaalin_cyrillic.py  test_kaalin_latin.py  test_kaalin_number.py  test_kaalin_syllable.py  test_num2words.py
